<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_icon_menu_map_pin"
            android:title="@string/nearbystore" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_icon_menu_social"
            android:title="@string/mySocial" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_icon_menu_map_store"
            android:title="@string/saved_dispensaries" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_icon_menu_explore_strain"
            android:title="@string/explore_strains" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_icon_menu_shopping_cart"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_icon_menu_calculator"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_cardlist"
            android:iconTint="@color/black"
            android:icon="@drawable/ic_icon_menu_credit_card"
            android:title="@string/card_list" />
        <item
            android:id="@+id/nav_parcel"
            android:icon="@drawable/ic_icon_menu_parcel"
            android:title="@string/parcels" />
    </group>

    <group >
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_icon_menu_account_logout"
            android:title="@string/logout" />
    </group>


</menu>
