<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mySocial"
            android:icon="@drawable/ic_icon_menu_social"
            android:title="@string/mySocial" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_icon_notifications_outline"
            android:title="@string/action_notification" />
        <item
            android:id="@+id/nav_myDriver"
            android:icon="@drawable/ic_icon_driver_bike"
            android:title="@string/myDriver" />
        <item
            android:id="@+id/nav_becomeHBChoice"
            android:icon="@drawable/ic_icon_star_outline"
            android:title="@string/become_HB_choice" />

    </group>

    <group >
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_icon_menu_account_logout"
            android:title="@string/logout" />
    </group>


</menu>
