<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_15sdp">


    <TextView
        android:padding="@dimen/_8sdp"
        android:id="@+id/report_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/report"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />
    <TextView
        android:padding="@dimen/_8sdp"

        android:id="@+id/turnoff_notification_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/turnOnNotification"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:padding="@dimen/_8sdp"

        android:id="@+id/copylink_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/copyLink"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />
    <TextView
        android:padding="@dimen/_8sdp"

        android:id="@+id/shareto_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/share_to"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:padding="@dimen/_8sdp"

        android:id="@+id/unfollow_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/unfollow"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />
    <TextView
        android:padding="@dimen/_8sdp"

        android:id="@+id/mute_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/mute"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>