<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        android:icon="@drawable/ic_notification"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_mapHome"
        android:icon="@drawable/ic_white_store"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_cart_toolbar"
        app:showAsAction="always" />

</menu>
